--- a/style.css
+++ b/style.css
@@ -80,3 +80,33 @@ font-weight: 700;
     
 
 }
+.img-set img{
+    width: 100%;
+}
+.img-set{
+    width: 25%;
+    float: left;
+    margin-left: 80px;
+    
+
+}
+#third{
+    margin-left: 20px;
+}
+
+#first{
+    position: relative;
+    left: 60px;
+    
+}
+h1{
+    text-align: center;
+    font-size: 30px;
+    
+}
+.latest{
+    margin-top: 80px;
+    background-image: url(images/latest-work-bg.png);
+    background-size: cover;
+    background-position: center;
+}
